--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@supabase/supabase-js": "^2.95.3",
     "@superset-ui/embedded-sdk": "^0.3.0",
+    "@typeform/embed-react": "^4.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
