--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@supabase/supabase-js": "^2.95.3",
     "@superset-ui/embedded-sdk": "^0.3.0",
     "@typeform/embed-react": "^4.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.31.0",
