--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.2.3",
     "react-confetti": "^6.4.0",
     "react-dom": "19.2.3",
+    "react-switch": "^7.1.0",
     "react-use": "^17.6.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
